--- a/src/components/size_chart_drawer/index.scss
+++ b/src/components/size_chart_drawer/index.scss
@@ -4,10 +4,10 @@
   right: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 20;
   background-color: rgb(0, 0, 0);
   opacity: 0;
   visibility: hidden;
+  z-index: 20;
 
   transition:
     opacity 0.2s ease,
@@ -61,6 +61,8 @@
 
     .close-button {
       padding: 30px;
+      background-color: white;
+      border: none;
     }
   }
 
